--- a/res/layout-sw533dp-land/dialer.xml
+++ b/res/layout-sw533dp-land/dialer.xml
@@ -42,6 +42,7 @@
     </RelativeLayout>
     
     <RelativeLayout
+        android:id="@+id/dialer_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="10dp">
