--- a/res/layout-sw720dp-land/video.xml
+++ b/res/layout-sw720dp-land/video.xml
@@ -3,18 +3,11 @@
     android:id="@+id/video_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
-    <org.linphone.mediastream.video.display.GL2JNIView 
+	
+	<org.linphone.ui.LinphoneVideoView
         android:visibility="visible" 
         android:layout_height="match_parent" 
         android:layout_width="match_parent" 
-        android:id="@+id/videoSurface" />
-	
-	<SurfaceView
-	    android:id="@+id/videoCaptureSurface"
-	    android:layout_width="290dp"
-	    android:layout_height="240dp"
-	    android:layout_alignParentBottom="true"
-	    android:layout_alignParentRight="true" />
+        android:id="@+id/videoSurface"/>
 
 </RelativeLayout>
